Fix alignment of signup button

--- a/client/src/web/assets/css/app.less
+++ b/client/src/web/assets/css/app.less
@@ -157,7 +157,7 @@ div.screen {
   font-size: 18px;
   text-align: center;
   letter-spacing: 0.4px;
-  width: 375px;
+  width: 100%;
   height: 50px;
   line-height: 50px;
   background: rgba(255,255,255,0.25);
